<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmEditActivity">

    <LinearLayout android:orientation = "horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap-content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="276dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/blade_runner" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:text="@string/catchPhoto" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="199dp"
            android:layout_weight="1"
            android:text="@string/selectImage" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="376dp"
        android:layout_height="440dp"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>